# savarez_agent

./: .agent.md  .coveragerc  .cursorignore  .dockerignore  .editorconfig  .env.example  .env.fleet.example  .env.railway.example  .git-blame-ignore-revs  .git_commit_msg.txt  .gitattributes  .gitignore  .gitleaks.toml  .hadolint.yaml  .mailmap  .mcp.json  .pr_agent.toml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .railwayignore  .repomixignore  A2A_IMPLEMENTATION.md  AGENT-DISCIPLINE.md  AGENT-HUB.md  AGENTS-OVERLAY.md  AGENTS.md  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  CLAUDE_CODE.md  CODEMAP.md  COMMERCIAL-LICENSE.md  CONTEXT.md  CONTRIBUTING.md  CONTRIBUTIONS.md  CONTRIBUTORS_AUTO.md  CREDITS  (+374 more)
.ai/: implementation-summary.json  opencode-plan.json
.beads/: interactions.jsonl  issues.jsonl  phase3-d1-fingerprint-model.md  phase3-d2-incremental-scan.md  phase4-d1-import-classification.md  phase4-d2-entrypoint-detection.md  phase4-d3-orphan-triage.md  phase4-d4-hub-ranking.md  phase4-d5-semantic-extraction.md  phase4-d6-delta-reporting.md  phase4-d7-scan-report-artifact.md  ua-tier1-003-edge-package-config-markers.md
.claude/: launch.json  settings.json  settings.local.json
.codex/: config.toml
.cursor/: environment.json  hooks.json  mcp.json  setup-cloud-agent.sh
.dev-workflow/: code-graph.db  phase-tracker.json
.devcontainer/: devcontainer.json
.devlogs/: 2026-05-01-auto-rollover-context-compression.md
.githooks/: commit-msg
.github/: PR_BODY_23243.md  PR_REVIEW_POLICY.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.gitnexus/: meta.json
.hermes/: PROJECT_STATE.md  project.md  repo-policy.yaml  task-schema.yaml  tasks.yaml
.jules/: bolt.md  sentinel.md
.learnings/: ERRORS.md
.obsidian/: workspace.json
.orbiracle-sidecar/: .hermes_history  .skills_prompt_snapshot.json  .update_check  SOUL.md  channel_directory.json  config.yaml  gateway.pid  gateway_state.json  processes.json  state.db-shm  state.db-wal
.paperclip_artifacts/: candidate-skip-ledger.jsonl
.plan_improvement/: TODO.md
.planning/: STATE.md
.plans/: 2026-05-14-pr-cleanup.md  a2a-protocol.md  cron-delivery-context-handoff.md  implementation-plan.md  openai-api-server.md  phase-2-d1-d3-evaluation-plan.md  phase-2-flywheel-ua-integration.md  phase-3-incremental-analysis.md  phase-4-structural-semantic-understanding.md  project-state-ua-flywheel.md  resolve_research_finance_flaws.md  streaming-support.md  ua-incorporation-strategy.md
.serena/: project.yml
.simplicio/: pr-44744.txt  pr-44771.txt  pr-44795.txt  pr-44822.txt  pr-44843.txt  pr-44866.txt  pr-44936.txt  pr-44942.txt  pr-44995.txt  pr-45058.txt  runtime-resource-map.json
.specify/: integration.json
BusinessOS/: .gitignore  PROJECT.md  README.md
EVALS/: golden_set.md  rubric.yaml
OPERATOR-INBOX/: README.md
_bmad/: config.toml  config.user.toml
_bmad-output/: project-context.md
_docs/: 2026-05-21_cron-output-path-hardening_codex.md  2026-05-21_resume-title-scope-hardening_codex.md  2026-05-21_todo_hydration_hardening_codex.md  2026-05-21_xurl_windows_tweet_path_Codex.md  2026-05-24_desktop-shortcuts-rtx3060_hermes-agent-upstream-sync.md  2026-05-24_upstream_sync_2666009cc_Codex.md  2026-05-26_ai-portfolio-evidence-codex.md  2026-05-27_upstream-sync_hermes-agent.md  2026-05-29_upstream-0.15.1-redteam_hermes-agent.md  2026-06-02_gitignore-secret-hygiene_Codex.md  (+1 more)
agathos/: cli.py  (+18 more)
apps/hermes-manager/: Cargo.toml
apps/hermes-manager/fixtures/: bundled-manifest.valid.json
apps/hermes-manager/src/: bundled_manifest.rs  commands.rs  error.rs  installed_manifest.rs  lib.rs  main.rs  ownership.rs  paths.rs  platform.rs
borge/: pyproject.toml
borge/memory/: consolidation.py
browser-runtime/: .gitignore  Cargo.toml  README.md  deny.toml  package-lock.json  package.json
browser-runtime/docs/: fingerprint-hygiene-residual-risk-runbook.md  full-reference.md  hbr-agentic-browser-safe-foundation.md  implementation-plan.md  p4-fingerprint-hygiene-architecture.md  p5-residual-closure.md  review-report.md
browser-runtime/scripts/: artifact_hygiene_scan.py  coverage-gates.sh  fingerprint_compare.py  fingerprint_probe.py  public_detector_capture.py  public_detector_compare.py  security-gates.sh  stealth_profile_audit.py  test_fingerprint_scripts.py
browser-runtime/scripts/fixtures/: fingerprint_probe_raw_fixture.json  fingerprint_probe_session_fixture.json
browser-runtime/src/: api.rs  backend.rs  captcha_solver.rs  cdp.rs  cli.rs  client.rs  config.rs  credentials.rs  display.rs  inspector.rs  lib.rs  main.rs  models.rs  security.rs  store.rs  test_support.rs
browser-runtime/tests/: browser_integration.rs  cli_binary.rs  contract_coverage.rs
standalone_wechat_hermes/: .gitignore  README.md  pyproject.toml
standalone_wechat_hermes/src/wechat_hermes/: __init__.py  atomic_json.py  base_platform.py  cli.py  gateway_config.py  gateway_session.py  minimal_status.py  utils_shim.py  weixin_adapter.py
(+15976 files in other folders)
