[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "borge-agent"
version = "0.1.0"
description = "Cognitively-grounded AI agent — Free Energy Principle, Bayesian beliefs, affective state, cognitive memory"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Zhibao" }]
keywords = ["ai", "agent", "free-energy-principle", "bayesian", "cognitive-architecture", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Minimal core — zero LLM dependency, pure cognitive layer
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
# Standalone agent loop (Anthropic SDK)
anthropic = ["anthropic>=0.39.0,<1"]

# Hermes plugin integration
hermes = ["hermes-agent>=0.7.0"]

# All
all = ["borge-agent[anthropic]"]

dev = [
  "pytest>=9.0",
  "anthropic>=0.39.0",
]

[project.scripts]
borge = "borge.cli:main"

[project.urls]
Homepage = "https://github.com/zhibao-dev/hermes-agent/tree/borge-agent"
Repository = "https://github.com/zhibao-dev/hermes-agent"
"Design Doc" = "https://github.com/zhibao-dev/hermes-agent/blob/borge-agent/docs/borge-agent-design.md"

[tool.setuptools.packages.find]
include = ["borge", "borge.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
