[package]
name = "hermes-browser-runtime"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
futures-util = "0.3"
http = "1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
