[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wechat-hermes-bridge"
version = "0.1.0"
description = "Standalone WeChat (Tencent iLink) messaging bridge derived from Hermes Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9.0,<4",
  "cryptography>=42.0.0,<46",
  "certifi>=2024.0.0",
]

[project.optional-dependencies]
llm = ["openai>=1.60.0,<3"]
dotenv = ["python-dotenv>=1.0.0,<2"]
dev = ["openai>=1.60.0,<3", "python-dotenv>=1.0.0,<2"]

[project.scripts]
wechat-hermes-bridge = "wechat_hermes.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
