# 文件意图：定义 Hermes Rust 安装管理器的独立构建单元。
[package]
name = "hermes-manager"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "Hermes install, repair, and uninstall manager"
license = "MIT"

[[bin]]
name = "hermes-manager"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }
winreg = "0.52"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
